--- a/PixelBot/src/main/resources/application.properties
+++ b/PixelBot/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=test123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql: true
+spring.h2.console.enabled=true
